# game-framework-runners

./: Pipfile  README.md  pyproject.toml
docs/: ARCHITECTURE.md  CODEBASE_CONTEXT.md  LOCAL_DEVELOPMENT.md  TROUBLESHOOTING.md
src/runners/cloud/: client_runner.py  cloud_metadata_handler.py  runner_client.py  runner_server.py  server_runner.py
src/runners/contracts/: runner_client_abc.py  runner_server_abc.py
src/runners/local/: client_runner.py  local_metadata_handler.py  metadata_runner.py  runner_client.py  runner_server.py  server_runner.py
src/runners/utils/: hmacsigner.py  retries.py
utils/: file_handler.py
