[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "game-runners"
version = "0.1.0"
description = "Game Runners"
authors = [
  { name="Jenny Wadkins", email="threnjen@gmail.com" }
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
  "boto3",  # add your deps here
]

[tool.setuptools.packages.find]
where = ["src"]